--- a/res/layout/popup.xml
+++ b/res/layout/popup.xml
@@ -2,18 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-   	android:orientation="horizontal" 
-    android:background="@drawable/bg_selector" >
-	<TextView 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:id="@+id/popup_text"
-	    android:textSize="13sp"
-	    android:textStyle="bold"
-	    android:drawableLeft="@drawable/icon_mini"
-	    android:layout_gravity="center_horizontal"
-	    android:gravity="center"
-	    android:text="10"
-	    ></TextView>    
+    android:background="@drawable/bg_selector"
+    android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/popup_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:drawableLeft="@drawable/icon_mini"
+        android:gravity="center"
+        android:text="10"
+        android:textSize="13sp"
+        android:textStyle="bold" >
+    </TextView>
 
 </LinearLayout>
