--- a/res/layout/nutiteq.xml
+++ b/res/layout/nutiteq.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:itiner="http://itiner.pl/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
@@ -13,17 +14,19 @@
 
         <TableRow>
 
-            <TextView
+            <pl.itiner.view.TextView
                 android:id="@+id/map_surname_name"
                 style="@style/map_header_text_highlighted"
+                itiner:default_text="@string/no_data"
                 android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
-            <TextView
+            <pl.itiner.view.TextView
                 android:id="@+id/map_value_cementry"
                 style="@style/map_header_text_highlighted"
+                itiner:default_text="@string/no_data"
                 android:textSize="18sp" />
         </TableRow>
 
@@ -37,16 +40,17 @@
                     style="@style/map_header_text"
                     android:text="@string/born_abv" />
 
-                <TextView
+                <pl.itiner.view.TextView
                     android:id="@+id/map_value_dateBirth"
-                    style="@style/map_header_text_highlighted" />
+                    style="@style/map_header_text_highlighted"
+                    itiner:default_text="@string/no_data" />
             </LinearLayout>
 
             <TextView
                 style="@style/map_header_text"
                 android:text="@string/quater" />
 
-            <TextView
+            <pl.itiner.view.TextView
                 android:id="@+id/map_quater_value"
                 style="@style/map_header_text_highlighted" />
         </TableRow>
@@ -61,16 +65,17 @@
                     style="@style/map_header_text"
                     android:text="@string/died_abv" />
 
-                <TextView
+                <pl.itiner.view.TextView
                     android:id="@+id/map_value_dateDeath"
-                    style="@style/map_header_text_highlighted" />
+                    style="@style/map_header_text_highlighted"
+                    itiner:default_text="@string/no_data" />
             </LinearLayout>
 
             <TextView
                 style="@style/map_header_text"
                 android:text="@string/row" />
 
-            <TextView
+            <pl.itiner.view.TextView
                 android:id="@+id/map_row_value"
                 style="@style/map_header_text_highlighted" />
         </TableRow>
@@ -85,20 +90,22 @@
                     style="@style/map_header_text"
                     android:text="@string/funreal" />
 
-                <TextView
+                <pl.itiner.view.TextView
                     android:id="@+id/map_value_dateFunreal"
-                    style="@style/map_header_text_highlighted" />
+                    style="@style/map_header_text_highlighted"
+                    itiner:default_text="@string/no_data" />
             </LinearLayout>
 
             <TextView
                 style="@style/map_header_text"
                 android:text="@string/field" />
 
-            <TextView
+            <pl.itiner.view.TextView
                 android:id="@+id/map_field_value"
                 style="@style/map_header_text_highlighted" />
         </TableRow>
     </TableLayout>
+
     <com.nutiteq.android.MapView
         android:id="@+id/nutiteq_mapview"
         android:layout_width="fill_parent"
