--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="2dp"
-        android:fadingEdgeLength="2dp"
-        android:fastScrollEnabled="true"
-        android:textFilterEnabled="true" />
-
-</merge>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:dividerHeight="2dp"
+    android:fadingEdgeLength="2dp"
+    android:fastScrollEnabled="true"
+    android:textFilterEnabled="true" />
