--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -6,10 +6,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/radio_btn_background</item>
-        <item name="android:paddingBottom">3dp</item>
-        <item name="android:paddingLeft">4dp</item>
-        <item name="android:paddingRight">4dp</item>
-        <item name="android:paddingTop">3dp</item>
+        <item name="android:padding">15dp</item>
         <item name="android:textColor">@color/radio_btn_txt</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
