Warning text tuning.

--- a/grave_finder_app/res/layout/list.xml
+++ b/grave_finder_app/res/layout/list.xml
@@ -9,7 +9,13 @@
         style="@style/list_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/list_offline_warning" />
+        android:text="@string/list_offline_warning"
+        android:textColor="@color/red"
+        android:padding="5dp"/>
+    
+    <View android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#80000000"/>
 
     <ListView
         android:id="@android:id/list"
