--- a/grave_finder_app/res/values/style.xml
+++ b/grave_finder_app/res/values/style.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="date_option_btn">
-        <item name="android:button">@null</item> 
+        <item name="android:button">@null</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/radio_btn_background</item>
@@ -28,8 +28,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
-    
+
     <style name="list_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -37,21 +38,26 @@
         <item name="android:paddingLeft">3dp</item>
         <item name="android:typeface">sans</item>
     </style>
-    
+
     <style name="list_text_highlighted" parent="@style/list_text">
         <item name="android:textStyle">bold</item>
-	</style>  
-	<style name="list_grp">
+    </style>
+
+    <style name="list_grp">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>    	    
-	</style>
-    
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="map_header_text" parent="@style/list_text">
         <item name="android:padding">2dp</item>
     </style>
-    
+
     <style name="map_header_text_highlighted" parent="@style/list_text_highlighted">
         <item name="android:padding">2dp</item>
     </style>
-    	
+
+    <style name="dropDownItemStyle" parent="@android:style/Widget.DropDownItem">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
