--- a/grave_finder_app/res/menu/menu.xml
+++ b/grave_finder_app/res/menu/menu.xml
@@ -4,17 +4,17 @@
     <item
         android:id="@+id/menu_clear_hints"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="Wyczyść podpowiedzi">
+        android:title="@string/clear_hints">
     </item>
     <item
         android:id="@+id/menu_clear_cache"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="Wyczyść pamięć podręczną">
+        android:title="@string/clear_cache">
     </item>
     <item
         android:id="@+id/menu_about"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="O programie">
+        android:title="@string/about_app">
     </item>
 
 </menu>
