--- a/grave_finder_app/res/layout/about.xml
+++ b/grave_finder_app/res/layout/about.xml
@@ -24,7 +24,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/mainL"
         android:background="@android:color/white"
         android:scrollbarStyle="insideInset" >
